# lib-dump

./: CMakeLists.txt  README.rst
include/dump/: console.hpp  filesystem.hpp  forest.hpp  latex_support.hpp  plaintext.hpp  support.hpp  tikz.hpp  x3_support.hpp
res/: ansi.txt  ansi_sparse.txt  forest.tex  forest_sparse.tex  generate.sh  plain.txt  plain_sparse.txt  tikz.tex  tikz_sparse.tex
test/include/: test.hpp
test/include/dump/demo/: car.hpp  dumper.hpp
test/src/: CMakeLists.txt
test/src/dump/: console.cpp  forest.cpp  plaintext.cpp  tikz.cpp
